# ign-template

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  Taskfile.yaml  flake.nix
bun-ts-v1/: .gitignore  .ign-overwrite-ignore  AGENTS.md  CLAUDE.md  Taskfile.yml  biome.json  flake.nix  ign-template.json  package.json
general-v1/: .gitignore  .ign-overwrite-ignore  (+4 more)
python-v1/: .gitignore  .ign-overwrite-ignore  AGENTS.md  README.md  Taskfile.yml  flake.nix  ign-template.json  pyproject.toml
python-v1/.agents/skills/python-coding-standards/: SKILL.md
python-v1/impl-plans/: README.md
python-v1/src/@ign-var:PACKAGE_NAME@/: __init__.py  __main__.py  cli.py
python-v1/tests/: test_package.py
rust-v1/: .gitignore  .ign-overwrite-ignore  AGENTS.md  CLAUDE.md  Cargo.toml  Taskfile.yml  flake.nix  ign-template.json  rust-toolchain.toml
rust-v1/.agents/: settings.json
rust-v1/.agents/agents/: check-and-test-after-modify.md  git-commit.md  git-pr.md  impl-plan.md  rust-coding.md
rust-v1/.agents/marketplace/.agents-plugin/: marketplace.json
rust-v1/.agents/marketplace/.claude-plugin/: marketplace.json
rust-v1/.agents/marketplace/plugins/lsp/.agents-plugin/: plugin.json
rust-v1/.agents/marketplace/plugins/lsp/.claude-plugin/: plugin.json
rust-v1/.agents/skills/impl-plan/: SKILL.md
rust-v1/.agents/skills/rust-coding-standards/: SKILL.md  error-handling.md  project-layout.md  type-safety.md
rust-v1/.agents/skills/rust-coding-standards/agents/: openai.yaml
rust-v1/.agents/skills/supply-chain-secure-code/: SKILL.md
rust-v1/.agents/skills/supply-chain-secure-code/agents/: openai.yaml
rust-v1/.agents/skills/supply-chain-secure-install/: SKILL.md
rust-v1/.agents/skills/supply-chain-secure-install/agents/: openai.yaml
rust-v1/.agents/skills/supply-chain-secure-publish/: SKILL.md
rust-v1/.agents/skills/supply-chain-secure-publish/agents/: openai.yaml
rust-v1/.claude/agents/: check-and-test-after-modify.md  generate-commit.md  generate-pr.md  impl-plan.md  plan-from-design.md  rust-coding.md
rust-v1/.claude/commands/: gen-impl-plan.md
rust-v1/.claude/skills/design-doc/: SKILL.md
rust-v1/.claude/skills/impl-plan/: SKILL.md
rust-v1/.claude/skills/rust-coding-standards/: SKILL.md  async-patterns.md  project-layout.md  security.md
rust-v1/design-docs/references/: README.md
rust-v1/impl-plans/: README.md
rust-v1/impl-plans/templates/: plan-template.md
rust-v1/src/: lib.rs  main.rs
tauri-v1/src-tauri/: Cargo.toml  tauri.conf.json
tauri-v1/src-tauri/src/: lib.rs  main.rs
(+217 files in other folders)
